Update sponsors - remove sponsorship info, add Tailwind, combine cards.

--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -1,28 +1,13 @@
 <div class='card'>
   <div class='title'>Sponsors</div>
   <div class='line'></div>
-  <p>We're looking for companies to cover the costs of this workshop so that it will be free for attendees. The following are the sponsorship levels for this event:</p>
-  <ul>
-    <li>
-      $250 - Logo on workshop slides and website
-    </li>
-    <li>
-      $500 - Logo on workshop slides and website, and company-provided materials placed at registration table.
-    </li>
-    <li>
-      $750 - Logo on workshop slides and website, company-provided materials placed at registration table, and 5 minutes to discuss your company with the attendees.
-    </li>
-  </ul>
-  <p>Contact one of the event organizers if your company is interested in sponsoring!</p>
-</div>
-
-<div class='card'>
+  <p>Thank you to the sponsors that are covering the costs of this workshop so that it will be free for attendees!</p>
+  <a href="https://www.tailwindapp.com/">
+    <img class='sponsor' src='assets/tailwind.jpg' alt='Tailwind'>
+  </a>
   <a href="https://ruralsourcing.com">
     <img class='sponsor' src='assets/RSI.png' alt='Rural Sourcing'>
   </a>
-</div>
-
-<div class='card'>
   <a href="https://moonswitch.com/">
     <img class='sponsor' src='assets/moonswitch.png' alt='Moonswitch'>
   </a>
