Make location clearer.

--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,19 +1,18 @@
 <div class='card'>
   <div class='title'>Location Information</div>
   <div class='line'></div>
-  <p>The workshop will be held at:</p>
-  <p>
-    <a href='https://project3810.com/'>Project 3810</a><br>
-    3810 N Tulsa Ave<br>
-    Oklahoma City, OK
-  </p>
-
+  <p>The workshop will be held at <a href='https://project3810.com/'>Project 3810</a> in Northwest Oklahoma City.</p>
+  <p>Project 3810 is halfway between Meridian and Portland, and halfway between NW 36th Street and NW 39th Expressway.</p>
   <p>Parking is located on the North side of the building.</p>
   <div class='map-container'>
     <a href='https://www.google.com/maps/place/Project+3810/@35.5092621,-97.5943377,17z/data=!3m1!4b1!4m5!3m4!1s0x87b21aa24de62261:0x47d007373a8e170c!8m2!3d35.5092578!4d-97.592149' target="_blank">
       <img class='map-image' src='assets/project-3810-map.png'>
     </a>
   </div>
+  <p>
+    3810 N Tulsa Ave<br>
+    Oklahoma City, OK
+  </p>
 </div>
 
 <div class='card'>
