--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,13 +4,9 @@
   <p>
     Women are underrepresented in the tech market. We want to change that. The Rails OKC Workshop is an event for <em>women attendees only</em> that serves as an introduction to web development. Our goal is to provide a supportive, welcoming environment that empowers women to become developers, designers, engineers, or simply spark a new hobby. Using the powerful Ruby on Rails framework, attendees will learn how to build their very own websites. We hope that you will join us.
   </p>
-  <p>5:30 pm - 7:30 pm on Friday, March 29, 2019</p>
-  <p>9:30 am - 5:30 pm on Saturday, March 30, 2019</p>
-  <p>
-    <a href='https://project3810.com/'>Project 3810</a><br>
-    3810 N Tulsa Ave<br>
-    Oklahoma City, OK
-  </p>
+  <p>5:30 pm - 7:30 pm on Friday, March 29, 2019<br>
+    9:30 am - 5:30 pm on Saturday, March 30, 2019</p>
+  <p>The workshop will be held at <a href='https://www.google.com/maps/place/Project+3810/@35.5092621,-97.5943377,17z/data=!3m1!4b1!4m5!3m4!1s0x87b21aa24de62261:0x47d007373a8e170c!8m2!3d35.5092578!4d-97.592149'>Project 3810</a> in Northwest Oklahoma City.</p>
 </div>
 
 <div class='card'>
