Remove buttons to sign up as a coach or volunteer because we have enough.

--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -19,14 +19,8 @@
     <li>Are willing to adhere to the <a href='https://www.techlahoma.org/code-of-conduct/'>Techlahoma Code of Conduct</a>.</li>
     <li>Interview with the organizer or co-organizer before the workshop.</li>
   </ul>
-  <p>Meet these requirements? Great! Fill out this form, and we will be in touch:</p>
-  <div class='button-box'>
-    <div class='button' (click)='signUp()'>COACH SIGN UP</div>
-  </div>
+  <p>Meet these requirements? Great! Contact one of the event organizers, and we will be in touch.
 
   <h2>Volunteer</h2>
-  <p>Want to help out, but don't want to be a coach? No problem! We need people to help set up, pick up food, and clean up after. Fill out this form:</p>
-  <div class='button-box'>
-    <div class='button' (click)='signUp()'>VOLUNTEER SIGN UP</div>
-  </div>
+  <p>Want to help out, but don't want to be a coach? No problem! We need people to help set up, pick up food, and clean up after. Contact one of the event organizers!</p>
 </div>
