Remove button to sign up.

--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -5,10 +5,7 @@
   <p>There are three ways to participate in the workshop: as an attendee, coach, or volunteer.</p>
 
   <h2>Attendee</h2>
-  <p>You're a woman who wants to learn web development? Great! To sign up, simply fill out this google form:</p>
-  <div class='button-box'>
-    <div class='button' (click)='signUp()'>ATTENDEE SIGN UP</div>
-  </div>
+  <p>You're a woman who wants to learn web development? Great! To sign up, contact one of the event organizers!</p>
 
   <h2>Coach</h2>
   <p>You're a man or a woman who wants to help teach women to program? We can use you! Don't worry, you don't have to be a developer. As long as you meet these requirements, you are a candidate.</p>
