Updated components for OKC networking event.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,5 @@
-<a class='forkme-link' href='https://github.com/austinwk/rails_workshop_website' target='_blank'>
-  <img src='assets/forkme.png'>
-</a>
 <div class='container'>
   <div class='header'>
-    <img class='logo' src='assets/logo.png'>
+    <img class='logo' src='assets/techlahoma_horizontaltext.png'>
   </div>
 </div>
