--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -7,10 +7,10 @@
     <img src='assets/info.svg'>
     <span>Info</span>
   </a>
-  <a mat-tab-link [routerLink]='["sign-up"]' routerLinkActive='highlight'>
+  <!-- <a mat-tab-link [routerLink]='["sign-up"]' routerLinkActive='highlight'>
     <img src='assets/assignment.svg'>
     <span>Sign-up</span>
-  </a>
+  </a> -->
   <a mat-tab-link [routerLink]='["questions"]' routerLinkActive='highlight'>
     <img src='assets/chat.svg'>
     <span>Questions</span>
