--- a/src/app/components/questions/questions.component.html
+++ b/src/app/components/questions/questions.component.html
@@ -1,33 +1,15 @@
 <div class='card'>
   <div class='title'>Questions</div>
   <div class='line'></div>
-  <h3>How much does this workshop cost for attendees?</h3>
-  <p>Nothing! Sponsors will cover the costs.</p>
+  <h3>Is it too late to sponsor this event?</h3>
+  <p>Definitely not! If you would be interested in sponsoring this event please contact Kimberly Collins at kcollins@techlahoma.org.</p>
 
-  <h3>Can men come?</h3>
-  <p>Men can be coaches and volunteers, but only women can attend as learners.</p>
+  <h3>Is there a cost associated with attending this event?</h3>
+  <p>No thanks to our generous sponsors this networking event is free for all attendees. 
+  </p>
+  <h3>What should I wear to this event?</h3>
+  <p>We recommend business casual attire for this event.</p>
+  <h3>Is there a code of conduct?</h3>
+  <p>Yes! This event will adhere to <a href='https://www.techlahoma.org/code-of-conduct/'>Techlahoma's Code of Conduct</a>.
 
-  <h3>This is for women. Why are men allowed to be coaches?</h3>
-  <p>Like our intro says, women are underrepresented in the tech industry. Our goal is to change that. It can be difficult to find enough women to coach the number of attendees that we have.</p>
-
-  <h3>Do I need to bring my own laptop?</h3>
-  <p>Yes. Unfortunately, we do not have the resources to provide computers.</p>
-
-  <h3>Can I bring a guest?</h3>
-  <p>Sure! Just have her sign up so we are able to plan for food.</p>
-
-  <h3>Is food provided?</h3>
-  <p>Yes. Please look at the Info tab for more information.</p>
-
-  <h3>I have kids. Can I bring them?</h3>
-  <p>Unfortunately, everyone at the workshop must be 18 years or older. If you have a daughter over 18, she can sign up!</p>
-
-  <h3>What if I can't make it on time or have to leave early?</h3>
-  <p>No problem! You can come and go as you please.</p>
-
-  <h3>What if I don't finish?</h3>
-  <p>The goal of the workshop is to not only serve as an introduction, but also to give you the resources to continue learning. You'll leave with contact info of people you can reach out to with questions and materials to keep you going.</p>
-
-  <h3>What all do I need to bring?</h3>
-  <p>Just a laptop!</p>
 </div>
