--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -2,22 +2,5 @@
   <div class='title'>Sign Up</div>
   <div class='line'></div>
 
-  <p>There are three ways to participate in the workshop: as an attendee, coach, or volunteer.</p>
-
-  <h2>Attendee</h2>
-  <p>You're a woman who wants to learn web development? Great! To sign up, contact one of the event organizers!</p>
-
-  <h2>Coach</h2>
-  <p>You're a man or a woman who wants to help teach women to program? We can use you! Don't worry, you don't have to be a developer. As long as you meet these requirements, you are a candidate.</p>
-  <ul>
-    <li>Have some working knowledge of development environments like text editors, browser dev tools, etc.</li>
-    <li>Are able to complete the curriculum <em>before the event</em>. Coaches who do not do this will not be allowed to participate as a coach on the day of the workshop.</li>
-    <li>Have and <em>will</em> bring their own laptop.</li>
-    <li>Are willing to adhere to the <a href='https://www.techlahoma.org/code-of-conduct/'>Techlahoma Code of Conduct</a>.</li>
-    <li>Interview with the organizer or co-organizer before the workshop.</li>
-  </ul>
-  <p>Meet these requirements? Great! Contact one of the event organizers, and we will be in touch.
-
-  <h2>Volunteer</h2>
-  <p>Want to help out, but don't want to be a coach? No problem! We need people to help set up, pick up food, and clean up after. Contact one of the event organizers!</p>
+ <a href='https://www.techlahoma.org/code-of-conduct/'>Techlahoma Code of Conduct</a>.
 </div>
