--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -1,15 +1,19 @@
 <div class='card'>
   <div class='title'>Sponsors</div>
   <div class='line'></div>
-  <p>Thank you to the sponsors that are covering the costs of this workshop so that it will be free for attendees!</p>
-  <a href="https://www.tailwindapp.com/">
-    <img class='sponsor' src='assets/tailwind.jpg' alt='Tailwind'>
-  </a>
+  <p>We would like to thank our sponsors for making this networking event possible.</p>
   <a href="https://ruralsourcing.com">
     <img class='sponsor' src='assets/RSI.png' alt='Rural Sourcing'>
   </a>
-  <a href="https://moonswitch.com/">
-    <img class='sponsor' src='assets/moonswitch.png' alt='Moonswitch'>
+  
+  <a href="https://clevyr.com/" >
+    <img class='sponsor' src="assets/clevyr.png" alt="Clevyr">
+  </a>
+  <a href="https://americanfidelity.com/" >
+    <img class='sponsor' src="assets/american-fidelity.png" alt="American Fidelity">
+  </a>
+  <a href="https://www.deepforktechnology.com/" >
+    <img class='sponsor' src="assets/deep_fork_tech_logo.png" alt="Deep Fork">
   </a>
 </div>
 
