--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,66 +1,54 @@
-<div class='card'>
-  <div class='title'>Welcome!</div>
-  <div class='line'></div>
+<!DOCTYPE html>
+<div class="card">
+  <div class="title">Oklahoma City Networking Fair (in Northwest OKC)</div>
+  <div class="line"></div>
   <p>
-    Women are underrepresented in the tech market. We want to change that. The Rails OKC Workshop is an event for <em>women attendees only</em> that serves as an introduction to web development. Our goal is to provide a supportive, welcoming environment that empowers women to become developers, designers, engineers, or simply spark a new hobby. Using the powerful Ruby on Rails framework, attendees will learn how to build their very own websites. We hope that you will join us.
+    Join us for an oppportunity to meet members of our local tech community. We're expecting 75+ developers and IT professionals to attend!
   </p>
-  <p>5:30 pm - 7:30 pm on Friday, March 29, 2019<br>
-    9:30 am - 5:30 pm on Saturday, March 30, 2019</p>
-  <p>The workshop will be held at <a href='https://www.google.com/maps/place/Project+3810/@35.5092621,-97.5943377,17z/data=!3m1!4b1!4m5!3m4!1s0x87b21aa24de62261:0x47d007373a8e170c!8m2!3d35.5092578!4d-97.592149'>Project 3810</a> in Northwest Oklahoma City.</p>
+  <p>Please RSVP on <a href="http://meetu.ps/e/GyHGD/w7DF8/a">Meetup</a> if you would like to attend this event</p>
+  <p>When: 5:30 pm - 7:30 pm on Monday April 22, 2019</p>
+  <p>Where: This networking event will take place at <a href="https://www.google.com/maps/place/Project+3810/@35.5092621,-97.5943377,17z/data=!3m1!4b1!4m5!3m4!1s0x87b21aa24de62261:0x47d007373a8e170c!8m2!3d35.5092578!4d-97.592149">Project 3810</a> in Northwest Oklahoma City.</p>
 </div>
 
-<div class='card'>
-  <div class='header'>
-      <img class='avatar' src='assets/kimberly-collins.png'>
-      <div class='title-box'>
-        <div class='name'>Kimberly Collins</div>
-        <div class='sub-title'>Organizer</div>
+<div class="card">
+  <div class="header">
+      <img class="avatar" src="assets/kimberly-collins.png">
+      <div class="title-box">
+        <div class="name">Kimberly Collins</div>
+        <div class="sub-title">Organizer</div>
     </div>
   </div>
-  <div class='line'></div>
+  <div class="line"></div>
   <p>
-    Kimberly is a C#.NET/SQL Server consultant with over a decade of experience in software development. She's on the board of directors for Techlahoma and is very involved in the local tech community. Kimberly has been an attendee and coach at past Rails workshops and is excited about organizing this one!
-  <p>
-</div>
-
-<div class='card'>
-  <div class='header'>
-      <img class='avatar' src='assets/ryan-labouve.png'>
-      <div class='title-box'>
-        <div class='name'>Ryan LaBouve</div>
-        <div class='sub-title'>Co-Organizer</div>
-    </div>
-  </div>
-  <div class='line'></div>
-  <p>
-    Developer for the open web, mostly Ember.js, Rails, and Javascript. Enjoys lifting heavy things, automating annoying tasks, and contemplating life while in the sauna.
+      Kimberly is a software consultant with over a decade of experience in C#.NET and SQL Server. She"s on the board of directors for Techlahoma and is very involved in the local tech community.
   </p>
 </div>
 
-<div class='card'>
-  <div class='header'>
-      <img class='avatar' src='assets/john-mosesman.png'>
-      <div class='title-box'>
-        <div class='name'>John Mosesman</div>
-        <div class='sub-title'>Co-Organizer</div>
+<div class="card">
+  <div class="header">
+      <img class="avatar" src="assets/chris-tse.jpg">
+      <div class="title-box">
+        <div class="name">Christopher Tse</div>
+        <div class="sub-title">Co-Organizer</div>
     </div>
   </div>
-  <div class='line'></div>
+  <div class="line"></div>
   <p>
-      John has been doing web development for almost 8 years now, and he has been a huge fan of Ruby from the beginning. He organizes the OKC Ruby group and loves helping people get started in programming (and Ruby!).
+    Chris is a software engineer at Oracle and one of the organizers of FreeCodeCamp Norman.
   </p>
 </div>
 
-<div class='card'>
-  <div class='header'>
-      <img class='avatar' src='assets/austin-keeton.png'>
-      <div class='title-box'>
-        <div class='name'>Austin W Keeton</div>
-        <div class='sub-title'>Co-Organizer</div>
+<div class="card">
+  <div class="header">
+      <img class="avatar" src="assets/alex-ayon.png">
+      <div class="title-box">
+        <div class="name">Alex Ayon</div>
+        <div class="sub-title">Co-Organizer</div>
     </div>
   </div>
-  <div class='line'></div>
+  <div class="line"></div>
   <p>
-    Austin works as a software engineer at Legal Shield. He started programming 3 years ago with the dream that he would one day be a developer. Now that it has come true, he is passionate about helping other people realize their dreams.
+      Alex is a bioengineer currently working in the biotechnology industry and is one of the co-organizers for FreeCodeCamp OKC.
   </p>
 </div>
+
