--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,7 +1,7 @@
 <div class='card'>
   <div class='title'>Location Information</div>
   <div class='line'></div>
-  <p>The workshop will be held at <a href='https://project3810.com/'>Project 3810</a> in Northwest Oklahoma City.</p>
+  <p>This networking event will be held at <a href='https://project3810.com/'>Project 3810</a> in Northwest Oklahoma City.</p>
   <p>Project 3810 is halfway between Meridian and Portland, and halfway between NW 36th Street and NW 39th Expressway.</p>
   <p>Parking is located on the North side of the building.</p>
   <div class='map-container'>
@@ -15,55 +15,11 @@
   </p>
 </div>
 
-<div class='card'>
-  <div class='title'>Schedule</div>
-  <div class='line'></div>
-  <p>The event is broken up into two parts: an install fest and the workshop itself.</p>
-
-  <h3>Install Fest</h3>
-  <h4>Friday, March 29th, 2019 from 5:30pm - 7:30pm</h4>
-  <p>Completely optional, this is to give attendees a head start on setting up their computers for the main event on Saturday, the 30th.</p>
-  <p>We'll make sure that all of the tools needed to follow the curriculum are up and running so you can dive right in. Can't make it? No worries! There is plenty of time on Saturday to get set up.</p>
-
-  <h3>Workshop</h3>
-  <h4>Saturday, March 30th, 2019 from 9:30am - 5:30pm</h4>
-  <p>This is the main event! We'll break into small groups, and coaches will help you dive into the curriculum. Food is provided, and we'll have frequent breaks to make sure that your brain stays fresh. We'll also have talks from people in the local community.</p>
-</div>
-
-<div class='card'>
-  <div class='title'>Curriculum</div>
-  <div class='line'></div>
-  <h2>Ruby on Rails</h2>
-  <p>
-    Websites have a lot of moving pieces. <a href='https://rubyonrails.org/'>Ruby on Rails</a> (or simply Rails) is a set of tools that automate a lot of the development process. It enables to you get a fully-functioning website up in minutes so that you can focus on making a great-looking, great-functioning website for your users.
-  </p>
-  <p>
-    We believe the Rails serves as a great introduction to web development because it provides a clear, accessible path to producing web applications. After the workshop there are countless additional resources and tutorials to help you continue learning and growing.
-  </p>
-  <h2>Resources</h2>
-  <p>
-    If you'd like to go ahead and start learning about Ruby on Rails, we recommend these resources:
-  </p>
-  <ul>
-    <li>
-      <a href='https://www.railstutorial.org/book'>Ruby on Rails Tutorial</a>
-    </li>
-    <li>
-      <a href='https://www.theodinproject.com/'>The Odin Project</a>
-    </li>
-  </ul>
-</div>
 
 <div class='card'>
   <div class='title'>Food</div>
   <div class='line'></div>
   <p>
-    Dinner will be provided on Friday evening.
-  </p>
-  <p>
-    Breakfast, lunch, and snacks will be provided on Saturday.
-  </p>
-  <p>
-    We'll do our best to take all dietary restrictions into account!
+    Drinks and a light dinner will be provided. Don't forget to RSVP on <a href="http://meetu.ps/e/GyHGD/w7DF8/a">Meetup!</a>
   </p>
 </div>
