Updated organizer informatin

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -48,7 +48,7 @@
   </div>
   <div class="line"></div>
   <p>
-      Alex is a bioengineer currently working in the biotechnology industry and is one of the co-organizers for FreeCodeCamp OKC.
+      Alex is a bioengineer who is enthusiastic about code and is currently working towards becoming a developer. Alex is one of the co-organizers for FreeCodeCamp OKC.
   </p>
 </div>
 
