--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,14 +5,16 @@
   <p>
     Join us for an oppportunity to meet members of our local tech community. We're expecting 75+ developers and IT professionals to attend!
   </p>
-  <p>Please RSVP on <a href="http://meetu.ps/e/GyHGD/w7DF8/a">Meetup</a> if you would like to attend this event</p>
   <p>When: 5:30 pm - 7:30 pm on Monday April 22, 2019</p>
   <p>Where: This networking event will take place at <a href="https://www.google.com/maps/place/Project+3810/@35.5092621,-97.5943377,17z/data=!3m1!4b1!4m5!3m4!1s0x87b21aa24de62261:0x47d007373a8e170c!8m2!3d35.5092578!4d-97.592149">Project 3810</a> in Northwest Oklahoma City.</p>
+  <p>Please RSVP on <a href="http://meetu.ps/e/GyHGD/w7DF8/a">Meetup</a> if you would like to attend this event</p>
 </div>
 
 <div class="card">
   <div class="header">
+      <a href="https://www.linkedin.com/in/collins-kimberly/">
       <img class="avatar" src="assets/kimberly-collins.png">
+      </a>
       <div class="title-box">
         <div class="name">Kimberly Collins</div>
         <div class="sub-title">Organizer</div>
@@ -26,7 +28,9 @@
 
 <div class="card">
   <div class="header">
+      <a href="https://www.linkedin.com/in/christopher-tse/">
       <img class="avatar" src="assets/chris-tse.jpg">
+      </a>
       <div class="title-box">
         <div class="name">Christopher Tse</div>
         <div class="sub-title">Co-Organizer</div>
@@ -40,7 +44,9 @@
 
 <div class="card">
   <div class="header">
+      <a href="https://www.linkedin.com/in/alex-ayon/">
       <img class="avatar" src="assets/alex-ayon.png">
+      </a>
       <div class="title-box">
         <div class="name">Alex Ayon</div>
         <div class="sub-title">Co-Organizer</div>
