--- a/src/app/components/questions/questions.component.html
+++ b/src/app/components/questions/questions.component.html
@@ -5,7 +5,7 @@
   <p>Definitely not! If you would be interested in sponsoring this event please contact Kimberly Collins at kcollins@techlahoma.org.</p>
 
   <h3>Is there a cost associated with attending this event?</h3>
-  <p>No thanks to our generous sponsors this networking event is free for all attendees. 
+  <p>Thanks to our generous sponsors this networking event is free for all attendees. 
   </p>
   <h3>What should I wear to this event?</h3>
   <p>We recommend business casual attire for this event.</p>
