Added food component, Food Icon and Food Routing. Updated Home page Information.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,9 +5,28 @@
   <p>
     Join us for an oppportunity to meet members of our local tech community. We're expecting 75+ developers and IT professionals to attend!
   </p>
-  <p>When: 5:30 pm - 7:30 pm on Monday April 22, 2019</p>
-  <p>Where: This networking event will take place at <a href="https://www.google.com/maps/place/Project+3810/@35.5092621,-97.5943377,17z/data=!3m1!4b1!4m5!3m4!1s0x87b21aa24de62261:0x47d007373a8e170c!8m2!3d35.5092578!4d-97.592149">Project 3810</a> in Northwest Oklahoma City.</p>
+  <p><em>When:</em> 5:30 pm - 7:30 pm on Monday April 22, 2019</p>
+  <p><em>Where:</em> This networking event will take place at <a href="https://www.google.com/maps/place/Project+3810/@35.5092621,-97.5943377,17z/data=!3m1!4b1!4m5!3m4!1s0x87b21aa24de62261:0x47d007373a8e170c!8m2!3d35.5092578!4d-97.592149">Project 3810</a> in Northwest Oklahoma City.</p>
   <p>Please RSVP on <a href="http://meetu.ps/e/GyHGD/w7DF8/a">Meetup</a> if you would like to attend this event</p>
+
+<p>The event will be in northwest Oklahoma City at Project 3810. It's halfway between Meridian and Portland, and halfway between NW 36th Street and NW 39th Expressway.</p>
+
+<p>Make plans to attend if you're looking for a job, contract work, mentorship opportunities, job candidates, or just networking. Feel free to bring business cards or copies of your resume! Attire is business casual.</p>
+
+<p>This event is come and go, so don't worry if you can't make it right at 5:30 or stay until 7:30!</p>
+
+<p>Contact one of the event organizers if your company or organization is interested in a sponsor booth.</p>
+
+<p>We've had events like this for FreeCodeCamp OKC, but this one is for anyone involved with Techlahoma! Watch this <a href="https://youtu.be/sALtyh5l5ag">video</a> from a smaller event to get an idea of what to expect.<p>
+
+<blockquote>"The FreeCodeCamp OKC meet and greet was where I met my current boss/employer. Being involved 100% had an influence on my success." - Austin Keeton</blockquote>
+
+<blockquote>"It was great to meet and talk with all the representatives from the different companies and gain more insight into each of them." - Ameya Joshi </blockquote>
+
+<blockquote>"A nice informal opportunity to get a sense of the hiring in OKC for tech folks." - Joe Denney</blockquote>
+
+<p>We will be serving alcohol (maximum of two drinks per person). If you want to drink alcohol at the event, we will verify your ID. Any minors under the age of 18 must be accompanied by a parent or legal guardian. No one under the age of 21 is allowed near the bar.</p>
+
 </div>
 
 <div class="card">
