--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -4,8 +4,12 @@
     <span>Home</span>
   </a>
   <a mat-tab-link [routerLink]='["info"]' routerLinkActive='highlight'>
-    <img src='assets/info.svg'>
-    <span>Info</span>
+    <img src='assets/location.svg'>
+    <span>Location</span>
+  </a>
+  <a mat-tab-link [routerLink]='["food"]' routerLinkActive='highlight'>
+    <img src='assets/local_dining.svg'>
+    <span>Food and Drink</span>
   </a>
   <!-- <a mat-tab-link [routerLink]='["sign-up"]' routerLinkActive='highlight'>
     <img src='assets/assignment.svg'>
