--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
-
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 body {
   background: #f1f5f8;
   font-family: Roboto, Arial, sans-serif;
