Added Sponsor Alert

--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -1,6 +1,11 @@
+<div class="card alert">
+  <p>Contact the event organizers if your company or organization is interested in a sponsor booth.</p>
+</div>
+
 <div class='card'>
   <div class='title'>Sponsors</div>
   <div class='line'></div>
+  
   <p>We would like to thank our sponsors for making this networking event possible.</p>
   <a href="https://ruralsourcing.com">
     <img class='sponsor' src='assets/RSI.png' alt='Rural Sourcing'>
