--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
   <p>
     Join us for an oppportunity to meet members of our local tech community. We're expecting 75+ developers and IT professionals to attend!
   </p>
-  <p><em>When:</em> 5:30 pm - 7:30 pm on Monday April 22, 2019</p>
+  <p><em>When:</em> Monday April 22, 2019 from 5:30 pm - 7:30 pm</p>
   <p><em>Where:</em> This networking event will take place at <a href="https://www.google.com/maps/place/Project+3810/@35.5092621,-97.5943377,17z/data=!3m1!4b1!4m5!3m4!1s0x87b21aa24de62261:0x47d007373a8e170c!8m2!3d35.5092578!4d-97.592149">Project 3810</a> in Northwest Oklahoma City.</p>
   <p>Please RSVP on <a href="http://meetu.ps/e/GyHGD/w7DF8/a">Meetup</a> if you would like to attend this event</p>
 
@@ -37,7 +37,7 @@
   </div>
   <div class="line"></div>
   <p>
-      Kimberly is a software consultant with over a decade of experience in C#.NET and SQL Server. She"s on the board of directors for Techlahoma and is very involved in the local tech community.
+      Kimberly is a software consultant with over a decade of experience in C#.NET and SQL Server. She's on the board of directors for Techlahoma and is very involved in the local tech community.
   </p>
 </div>
 
