Added new sponsor logos

--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -20,6 +20,12 @@
   <a href="https://www.deepforktechnology.com/" >
     <img class='sponsor' src="assets/deep_fork_tech_logo.png" alt="Deep Fork">
   </a>
+  <a href="https://www.powercosts.com/" >
+    <img class='sponsor' src="assets/power-costs-inc.png" alt="PCI">
+  </a>
+  <a href="https://www.life.church/" >
+    <img class='sponsor' src="assets/life-church.png" alt="Life Church">
+  </a>
 </div>
 
 <div class='card'>
