Added new sponsors to sponsors component

--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -26,6 +26,12 @@
   <a href="https://www.life.church/" >
     <img class='sponsor' src="assets/life-church.png" alt="Life Church">
   </a>
+  <a href="https://saxum.com/" >
+    <img class='sponsor' src="assets/saxum.svg" onerror="" alt="Saxum">
+  </a>
+  <a href="https://www.tailwindapp.com/" >
+    <img class='sponsor' src="assets/tailwind.png" onerror="" alt="Tailwind">
+  </a>
 </div>
 
 <div class='card'>
@@ -38,3 +44,4 @@
     </a>
   </div>
 </div>
+
