Added Rack59 sponsor link and logo

--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -30,7 +30,10 @@
     <img class='sponsor' src="assets/saxum.svg" onerror="" alt="Saxum">
   </a>
   <a href="https://www.tailwindapp.com/" >
-    <img class='sponsor' src="assets/tailwind.png" onerror="" alt="Tailwind">
+    <img class='sponsor' src="assets/tailwind.png"  alt="Tailwind">
+  </a>
+  <a href="https://rack59.com/" >
+    <img class='sponsor' src="assets/rack59.jpg"  alt="Rack59">
   </a>
 </div>
 
