Added sponsor logos

--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -35,6 +35,12 @@
   <a href="https://rack59.com/" >
     <img class='sponsor' src="assets/rack59.jpg"  alt="Rack59">
   </a>
+  <a href="https://liquid.fish/" >
+    <img class='sponsor' src="assets/liquidfish.svg"  alt="liquidfish">
+  </a>
+  <a href="https://www.simiancraft.com/" >
+    <img class='sponsor' src="assets/simiancraft.jpg"  alt="simiancraft">
+  </a>
 </div>
 
 <div class='card'>
