Updated sponsor logo

--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -1,7 +1,3 @@
-<div class="card alert">
-  <p>Contact the event organizers if your company or organization is interested in a sponsor booth.</p>
-</div>
-
 <div class='card'>
   <div class='title'>Sponsors</div>
   <div class='line'></div>
@@ -39,7 +35,7 @@
     <img class='sponsor' src="assets/liquidfish.svg"  alt="liquidfish">
   </a>
   <a href="https://www.simiancraft.com/" >
-    <img class='sponsor' src="assets/simiancraft.jpg"  alt="simiancraft">
+    <img class='sponsor' src="assets/Simiancraft-logo.png"  alt="simiancraft">
   </a>
 </div>
 
