Adding sponsor Thank You image

--- a/src/app/components/sponsors/sponsors.component.html
+++ b/src/app/components/sponsors/sponsors.component.html
@@ -1,3 +1,6 @@
+<div >
+  <img src="assets/thank-you-sponsors.png" alt="Thank you to our sponsors">
+</div>
 <div class='card'>
   <div class='title'>Sponsors</div>
   <div class='line'></div>
