--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <div class="card">
-  <div class="title">Oklahoma City Networking Fair (in Northwest OKC)</div>
+  <div class="title">Oklahoma City Networking Fair (West OKC)</div>
   <div class="line"></div>
   <p>
-    Join us for an oppportunity to meet members of our local tech community. We're expecting 75+ developers and IT professionals to attend!
+    Join us for an oppportunity to meet members of our local tech community. We're expecting 100+ developers and IT professionals to attend!
   </p>
-  <p><em>When:</em> Monday April 22, 2019 from 5:30 pm - 7:30 pm</p>
-  <p><em>Where:</em> This networking event will take place at <a href="https://www.google.com/maps/place/Project+3810/@35.5092621,-97.5943377,17z/data=!3m1!4b1!4m5!3m4!1s0x87b21aa24de62261:0x47d007373a8e170c!8m2!3d35.5092578!4d-97.592149">Project 3810</a> in Northwest Oklahoma City.</p>
-  <p>Please RSVP on <a href="http://meetu.ps/e/GyHGD/w7DF8/a">Meetup</a> if you would like to attend this event</p>
+  <p><em>When:</em> Monday January 27, 2020 from 5:30 pm - 7:30 pm</p>
+  <p><em>Where:</em> This networking event will take place at <a href="https://www.google.com/maps/search/?api=1&query=35.467274%2C-97.649605">Rack59 Data Center</a> in West Oklahoma City.</p>
+  <p>Please RSVP on <a href="https://www.meetup.com/Techlahoma-Foundation/events/267086809/">Meetup</a> if you would like to attend this event</p>
 
 <p>The event will be in northwest Oklahoma City at Project 3810. It's halfway between Meridian and Portland, and halfway between NW 36th Street and NW 39th Expressway.</p>
 
